# trio-asyncio

./: .appveyor.yml  .coveragerc  .gitignore  .readthedocs.yml  .style.yapf  .travis.yml  CHEATSHEET.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.rst  ci.sh  docs-requirements.txt  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml
ci/: rtd-requirements.txt  test-requirements.txt  travis.sh
debian/: .gitignore  changelog  control  copyright  rules  watch
docs/: Makefile  make.bat
docs/source/: conf.py  history.rst  index.rst  principles.rst  rationale.rst  usage.rst
newsfragments/: ###.misc.rst  115.bugfix.rst  121.misc.rst  123.misc.rst  130.bugfix.rst  134.bugfix.rst  137.feature.rst  140.feature.rst  143.bugfix.rst  146.misc.rst  149.bugfix.rst  161.bugfix.rst  30.feature.rst  33.bugfix.rst  36.feature.rst  36.removal.rst  40.bugfix.rst  49.bugfix.rst  58.bugfix.rst  64.removal.rst  66.feature.rst  76.bugfix.rst  80.bugfix.rst  82.misc.rst  89.bugfix.rst  91.feature.rst  92.feature.rst  99.bugfix.rst  README.rst
src/trio_asyncio/: __init__.py  _base.py  _child.py  _deprecate.py  _handles.py  _loop.py  _sync.py
src/trio_asyncio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  module_with_deprecations.py  pytest.ini  test_aio_subprocess.py  test_concurrent.py  test_deprecate.py  test_misc.py  test_sync.py  test_trio_asyncio.py  utils.py
tests/aiotest/: __init__.py  conftest.py  test_add_reader.py  test_callback.py  test_coroutine.py  test_network.py  test_thread.py  test_timer.py
tests/interop/: test_adapter.py  test_calls.py  test_delta.py
tests/python/: __init__.py  conftest.py  echo2.py  echo3.py  test_base_events.py  test_events.py  test_futures.py  test_locks.py  test_pep492.py  test_proactor_events.py  test_queues.py  test_selector_events.py  test_sslproto.py  test_streams.py  test_subprocess.py  test_tasks.py  test_transports.py  test_unix_events.py  test_windows_events.py  test_windows_utils.py
tests/scripts/: echo.py  echo3.py
trio_asyncio/: __init__.py  _adapter.py  _async.py  _base.py  _child.py  _deprecate.py  _handles.py  _loop.py  _sync.py  _util.py  _version.py  acall.py  adapter.py  async.py  async_.py  base.py  child.py  fd_stream.py  handles.py  loop.py  sync.py  util.py  version.py
