[build-system]
# setuptools v77 adds PEP 639 support
requires = ["setuptools >= 77"]
build-backend = "setuptools.build_meta"

[project]
name = "trio_asyncio"
description = "A re-implementation of the asyncio mainloop on top of Trio"
authors = [{name = "Matthias Urlichs", email = "matthias@urlichs.de"}]
license = "MIT OR Apache-2.0"
license-files = ["LICENSE*"]
keywords = [
    "async",
    "io",
    "trio",
    "asyncio",
    "trio-asyncio"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: BSD",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Framework :: Trio",
    "Framework :: AsyncIO",
]
requires-python = ">=3.9"
dependencies = [
    "trio >= 0.22.0",
    "outcome",
    "sniffio >= 1.3.0",
    "exceptiongroup >= 1.0.0; python_version < '3.11'",
    "greenlet",
]
dynamic = ["version"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/python-trio/trio-asyncio"
Documentation = "http://trio-asyncio.readthedocs.io"
Changelog = "https://trio-asyncio.readthedocs.io/en/latest/history.html"

[tool.setuptools]
# This means, just install *everything* you see under trio/, even if it
# doesn't look like a source file, so long as it appears in MANIFEST.in:
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "trio_asyncio._version.__version__"}

[project.optional-dependencies]
tests = [
    "pytest>=5.4",
    "pytest-trio >= 0.6",
]

[tool.pytest.ini_options]
addopts = ["-p", "no:asyncio"]
filterwarnings = [
    "error",
    "ignore:The loop argument is deprecated since Python 3.8:DeprecationWarning",
    'ignore:"@coroutine" decorator is deprecated since Python 3.8:DeprecationWarning',
    "default:Tried to add marker .* but that test doesn't exist.:RuntimeWarning",
    "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning",
    "ignore:'AbstractChildWatcher' is deprecated.*:DeprecationWarning"
]
junit_family = "xunit2"
xfail_strict = true

[tool.flake8]
max-line-length = 99
extend-ignore = ['D', 'E402', 'E731', 'E127', 'E502', 'E123', 'W503']

[tool.towncrier]
package = "trio_asyncio"
title_format = "trio-asyncio {version} ({project_date})"
filename = "docs/source/history.rst"
directory = "newsfragments"
underlines = ["-", "~", "^"]
issue_format = "`#{issue} <https://github.com/python-trio/trio-asyncio/issues/{issue}>`__"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
